<resources>
    <string name="app_name">龙鼎直播</string>
    <string name="text_home">主页</string>
    <string name="text_market">行情</string>
    <string name="text_suggest">建议</string>
    <string name="text_mine">我的</string>
    <string name="text_live">直播</string>
    <string name="disclaimer">免责声明:</string>
    <string name="disclaimer_info">分析师发表的言论均代表其个人对投资环境的市场观点，投资者应充分考虑投资。</string>
    <string name="filter_time">筛选时间</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="phonenumber">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="passwordagain">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="forgetPwd">忘记密码?</string>
    <string name="verificationCode">请输入验证码</string>
    <string name="getVerification">获取验证码</string>
    <string name="followRule">接受钦龙科技规章制度</string>
    <string name="submit">提交注册</string>
    <string name="logout">退出登录</string>
    <string name="userusername">昵称</string>
    <string name="userbirthday">出生日期</string>
    <string name="usergander">性别</string>
    <string name="userlocation">常住地</string>
    <string name="userphone">手机号</string>
    <string name="userqq">QQ</string>
    <string name="userrank">会员等级</string>
    <string name="usericon">头像</string>
    <string name="pwd">密码</string>
    <string name="ss">&#160;&#160;&#160;&#160;上海钦龙信息科技有限公司（龙鼎直播）。多年来专注于股票，期货，现货等投资领域。公司拥有一支专业的金融研发与运营团队，具有规范、高效、稳健的管理体系。主要提供股票、现货行情解读，实时互动直播，专家咨询，面对面指导，学习培训等服务。秉承“专业 专注 创新”的理念，竭力开拓互联网金融新里程，打造投资领域金牌服务平台。\n&#160;&#160;&#160;&#160;公司高度重视企业文化、人力资源体系和互联网金融模式的建设，使公司的精英型人才队伍不断扩大，聚集了一批具有丰富的大宗商品和金融投资工作经验的专业人才。在公司高管和业务骨干中，具有硕士以上学历的人员超过30%。
\n&#160;&#160;&#160;&#160;钦龙科技凭借雄厚的综合实力、深厚的行业背景成为了现货投资服务行业的创新领先者。面对我国日益增长的投资需求，公司将始终坚持"以客户为核心，为客户创造价值"的发展战略，恪守"谨慎稳健，严控风险"的行业原则，追求卓越进步，与广大客户共享辉煌的未来。
</string>
</resources>
