<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.longding999.longding.MainActivity">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="#664d4d4d"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MyRadioButtonStyle"
            android:text="@string/text_home"
            android:drawableTop="@drawable/slt_rb_home"
            android:checked="true"
            android:textColor="@drawable/slt_rb_maintext_color"/>
        <RadioButton
            android:id="@+id/rb_suggest"
            android:text="@string/text_live"
            style="@style/MyRadioButtonStyle"
            android:drawableTop="@drawable/slt_rb_live"
            android:textColor="@drawable/slt_rb_maintext_color"/>

        <RadioButton
            android:id="@+id/rb_market"
            android:text="@string/text_market"
            style="@style/MyRadioButtonStyle"
            android:drawableTop="@drawable/slt_rb_market"
            android:textColor="@drawable/slt_rb_maintext_color"/>



        <RadioButton
            android:id="@+id/rb_mine"
            android:text="@string/text_mine"
            style="@style/MyRadioButtonStyle"
            android:drawableTop="@drawable/slt_rb_mine"
            android:textColor="@drawable/slt_rb_maintext_color"/>
    </RadioGroup>

</LinearLayout>
