<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_layout"></include>


    <com.longding999.longding.view.ClearEditText
        android:id="@+id/edt_phoneNumber"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/shape_corner_white"
        android:hint="@string/phonenumber"
        android:inputType="number" />


    <com.longding999.longding.view.ClearEditText
        android:id="@+id/edt_password"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/shape_corner_white"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/shape_corner_red"
        android:padding="6dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/x34" />


</LinearLayout>