<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_layout"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/edt_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="@drawable/shape_corner_white"
            android:hint="@string/phonenumber"
            android:padding="6dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:id="@+id/edt_verification"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:background="@drawable/shape_corner_white"
            android:hint="@string/verificationCode"
            android:padding="6dp" />
        <Button
            android:id="@+id/btn_verifition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/shape_corner_red"
            android:text="@string/getVerification"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="@drawable/shape_corner_white"
            android:hint="@string/password"
            android:padding="6dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:id="@+id/edt_passwordagain"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="@drawable/shape_corner_white"
            android:hint="@string/passwordagain"
            android:padding="6dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <CheckBox
            android:id="@+id/cb_followrule"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:button="@drawable/slt_cb_rule"
            android:padding="6dp"
            android:text="@string/followRule"
            android:textColor="@drawable/slt_rb_color_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="@drawable/shape_corner_red"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>
</LinearLayout>