<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/litte_gray"
    android:orientation="vertical">

    <include layout="@layout/header_layout"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_usericon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/usericon"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_usericon"
                    android:layout_width="@dimen/x80"
                    android:layout_height="@dimen/x80"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/user"
                    app:riv_corner_radius="180dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"></View>


            <LinearLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/userusername"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="企鹅"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"></View>






            <LinearLayout
                android:id="@+id/layout_userpwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/pwd"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/y60"
                android:background="@color/rb_gray"/>

            <LinearLayout
                android:id="@+id/layout_usergander"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/usergander"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:id="@+id/tv_usergander"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="男"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"></View>

            <LinearLayout
                android:id="@+id/layout_userbirthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/userbirthday"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:id="@+id/tv_userbirthday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="1993-05-16"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"></View>


            <LinearLayout
                android:id="@+id/layout_userQQ"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/userqq"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:id="@+id/tv_userQQ"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="105474493"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"></View>


            <LinearLayout
                android:id="@+id/layout_userlocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/x40"
                    android:gravity="center_vertical"
                    android:text="@string/userlocation"
                    android:textColor="@color/text_suggest"
                    android:textSize="@dimen/x32" />

                <TextView
                    android:id="@+id/tv_userlocation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="上海"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/x40"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/rb_gray"></View>

        </LinearLayout>

    </ScrollView>

</LinearLayout>